<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:windowSoftInputMode="adjustPan|adjustResize"
    tools:context="com.tarun.saini.manager.CustomerUpdate">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_orange"
            android:fitsSystemWindows="false"
            android:maxLines="1"
            app:contentScrim="@drawable/gradient_orange"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@color/icon_tint_selected"
                android:fitsSystemWindows="true"
                android:id="@+id/image_upload_relative_layout"
                app:layout_collapseMode="parallax">

                <ImageButton
                    android:id="@+id/add_photo_button"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"

                    android:scaleType="fitCenter"
                    android:src="@drawable/backg" />

                <TextView
                    android:id="@+id/add_photo_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/add_photo_button"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/add_image_of_any_bill_or_document"
                    android:textColor="#607D8B"
                    android:textSize="16sp" />


                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"

                    android:scaleType="centerCrop" />


            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:fitsSystemWindows="false"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:id="@+id/nestedScrollView"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_marginBottom="54dp"
        >

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cardViewForm"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/form_container_layout">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/dimen_large">



                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/name_textInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/name"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_centerHorizontal="true"
                            android:layout_margin="8dp"
                            android:background="@drawable/et_bkg"
                            android:hint="@string/name"
                            android:padding="4dp"
                            android:inputType="textPersonName"
                            />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/address_textInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/address"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_centerHorizontal="true"
                            android:layout_margin="8dp"
                            android:background="@drawable/et_bkg"
                            android:hint="@string/address"
                            android:padding="4dp"
                            android:inputType="textPostalAddress"
                            />
                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/adhaar_textInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/adhaar"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_centerHorizontal="true"
                            android:layout_margin="8dp"
                            android:background="@drawable/et_bkg"
                            android:hint="@string/aadhaar"
                            android:padding="4dp"
                            android:inputType="numberSigned"
                            />
                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/phone_textInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/phone_no"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_centerHorizontal="true"
                            android:layout_margin="8dp"
                            android:background="@drawable/et_bkg"
                            android:hint="@string/phone"
                            android:padding="4dp"
                            android:inputType="phone"
                            />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/pan_textInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/pan"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_centerHorizontal="true"
                            android:layout_margin="8dp"
                            android:background="@drawable/et_bkg"
                            android:hint="@string/pan"
                            android:padding="4dp"
                            android:inputType="textCapCharacters"
                            />
                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/gst_textInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/gst"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_centerHorizontal="true"
                            android:layout_margin="8dp"
                            android:background="@drawable/et_bkg"
                            android:hint="@string/gstin"
                            android:padding="4dp"
                            android:inputType="textCapCharacters"
                            />
                    </android.support.design.widget.TextInputLayout>



                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/email_textInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_centerHorizontal="true"
                            android:layout_margin="8dp"
                            android:background="@drawable/et_bkg"
                            android:hint="@string/email_optional"
                            android:padding="4dp"
                            android:inputType="textEmailAddress"
                            />
                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/notes_textInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/notes"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:gravity="top"
                            android:layout_centerHorizontal="true"
                            android:layout_margin="8dp"
                            android:background="@drawable/et_bkg"
                            android:hint="@string/add_notes"
                            android:padding="4dp"
                            android:inputType="textMultiLine"
                            >
                        </EditText>
                    </android.support.design.widget.TextInputLayout>




                </LinearLayout>



            </RelativeLayout>

        </android.support.v7.widget.CardView>


    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>
